# medical-research-assistant

./: .env.prod.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 28b144a528e5_initial_schema.py  a1b2c3d4e5f6_multi_source_papers.py  b2c3d4e5f6a7_pmid_non_unique.py
backend/app/: main.py
backend/app/agents/: graph.py  nodes.py  prompts.py  state.py
backend/app/api/: deps.py
backend/app/api/routes/: ask.py  auth.py  chat.py  documents.py  health.py  history.py  research.py  retrieve.py  search.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chat.py  paper.py  search.py  user.py
backend/app/schemas/: auth.py  chat.py  document.py  paper.py  rag.py  research.py  retrieval.py
backend/app/services/: auth.py  chat.py  chunking.py  embeddings.py  federation.py  ingestion.py  library.py  llm.py  papers.py  pdf.py  prompts.py  pubmed.py  rag.py  retrieval.py  vector_store.py  vector_store_provider.py
backend/app/services/sources/: arxiv.py  base.py  clinicaltrials.py  crossref.py  europepmc.py  fda.py  openalex.py  pmc.py  pubmed_src.py  registry.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_chat.py  test_chunking.py  test_federation.py  test_health.py  test_ingestion.py  test_models.py  test_pdf.py  test_pubmed_parsing.py  test_query_relax.py  test_rag.py  test_retrieval.py  test_search_route.py
(+29 files in other folders)
