[project]
name = "medresearch-backend"
version = "0.1.0"
description = "AI Medical Research Assistant — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",   # multipart parsing for PDF uploads
    # Config & validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # External services
    "httpx>=0.28",                # async HTTP client (PubMed)
    "anthropic>=0.40",            # Claude API
    # RAG stack
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3",
    # Agents
    "langgraph>=0.2.60",
    # Documents
    "pypdf>=5.1",
    # Auth
    "pyjwt>=2.10",
    "bcrypt>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",            # in-memory SQL for unit tests
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
